--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -11,6 +11,8 @@
 #  paid       :boolean
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  received   :boolean          default(FALSE)
+#  user_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
